@@ -52,6 +52,9 @@ CApplicationLaunchShortcut.Launch_failed_no_binaries=Launch failed no binaries
 CApplicationLaunchShortcut.LaunchFailed=Launch failed
 CApplicationLaunchShortcut.LaunchDebugConfigSelection=Launch Debug Configuration Selection
 CApplicationLaunchShortcut.LaunchConfigSelection=Launch Configuration Selection
+CApplicationLaunchShortcut.Invalid_launch_mode_1=Invalid launch mode
+CApplicationLaunchShortcut.Invalid_launch_mode_2=Invalid launch mode.
+CApplicationLaunchShortcut.Invalid_launch_mode_3=Invalid launch mode.
 CApplicationLaunchShortcut.ChooseLaunchConfigToDebug=Choose a launch configuration to debug
 CApplicationLaunchShortcut.ChooseLaunchConfigToRun=Choose a launch configuration to run
 CApplicationLaunchShortcut.Launch_failed_no_project_selected=Launch failed no project selected
